--- a/build-caching-maven-samples/jacoco-project/pom.xml
+++ b/build-caching-maven-samples/jacoco-project/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd https://www.gradle.com/gradle-enterprise-maven-project https://www.gradle.com/schema/gradle-enterprise-maven-project.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jacoco-project</artifactId>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
 
     <parent>
         <groupId>com.example</groupId>
@@ -10,46 +10,17 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
+    <modules>
+        <module>coverage-report</module>
+        <module>util</module>
+    </modules>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.10</version>
-                <executions>
-                    <execution>
-                        <id>default-prepare-agent</id>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>default-report</id>
-                        <goals>
-                            <goal>report</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>default-check</id>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                        <configuration>
-                            <rules>
-                                <rule>
-                                    <element>BUNDLE</element>
-                                    <limits>
-                                        <limit>
-                                            <counter>COMPLEXITY</counter>
-                                            <value>COVEREDRATIO</value>
-                                            <minimum>0.70</minimum>
-                                        </limit>
-                                    </limits>
-                                </rule>
-                            </rules>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
         <pluginManagement>
@@ -74,9 +45,6 @@
                                                 </fileSets>
                                                 <properties>
                                                     <property>
-                                                        <name>excludes</name>
-                                                    </property>
-                                                    <property>
                                                         <name>footer</name>
                                                     </property>
                                                     <property>
@@ -95,25 +63,10 @@
                                                         <name>title</name>
                                                     </property>
                                                 </properties>
+                                                <ignoredProperties>
+                                                    <ignore>project</ignore>
+                                                </ignoredProperties>
                                             </inputs>
-                                            <nestedProperties>
-                                                <property>
-                                                    <name>project</name>
-                                                    <nestedProperties>
-                                                        <property>
-                                                            <name>artifactId</name>
-                                                        </property>
-                                                        <property>
-                                                            <name>build</name>
-                                                            <nestedProperties>
-                                                                <property>
-                                                                    <name>outputDirectory</name>
-                                                                </property>
-                                                            </nestedProperties>
-                                                        </property>
-                                                    </nestedProperties>
-                                                </property>
-                                            </nestedProperties>
                                             <iteratedProperties>
                                                 <property>
                                                     <name>formats</name>
@@ -125,10 +78,68 @@
                                                         <name>outputDirectory</name>
                                                     </directory>
                                                 </directories>
-                                                <cacheableBecause>report generation is CPU-bound</cacheableBecause>
+                                                <cacheableBecause>Faster to retrieve report from cache</cacheableBecause>
+                                            </outputs>
+                                        </execution>
+                                        <execution>
+                                            <id>default-report-aggregate</id>
+                                            <inputs>
+                                                <properties>
+                                                    <property>
+                                                        <name>dataFileIncludes</name>
+                                                    </property>
+                                                    <property>
+                                                        <name>dataFileExcludes</name>
+                                                    </property>
+                                                    <property>
+                                                        <name>footer</name>
+                                                    </property>
+                                                    <property>
+                                                        <name>includeCurrentProject</name>
+                                                    </property>
+                                                    <property>
+                                                        <name>includes</name>
+                                                    </property>
+                                                    <property>
+                                                        <name>outputEncoding</name>
+                                                    </property>
+                                                    <property>
+                                                        <name>skip</name>
+                                                    </property>
+                                                    <property>
+                                                        <name>sourceEncoding</name>
+                                                    </property>
+                                                    <property>
+                                                        <name>title</name>
+                                                    </property>
+                                                </properties>
+                                                <ignoredProperties>
+                                                    <ignore>project</ignore>
+                                                    <ignore>reactorProjects</ignore>
+                                                </ignoredProperties>
+                                            </inputs>
+                                            <iteratedProperties>
+                                                <property>
+                                                    <name>formats</name>
+                                                </property>
+                                            </iteratedProperties>
+                                            <outputs>
+                                                <directories>
+                                                    <directory>
+                                                        <name>outputDirectory</name>
+                                                    </directory>
+                                                </directories>
+                                                <cacheableBecause>Faster to retrieve report from cache</cacheableBecause>
                                             </outputs>
                                         </execution>
                                     </executions>
+                                    <inputs>
+                                        <properties>
+                                            <property>
+                                                <name>excludes</name>
+                                            </property>
+                                        </properties>
+                                    </inputs>
                                 </plugin>
                             </plugins>
                         </gradleEnterprise>
