--- a/build-data-capturing-gradle-samples/capture-test-pts-support/gradle-test-pts-support.gradle
+++ b/build-data-capturing-gradle-samples/capture-test-pts-support/gradle-test-pts-support.gradle
@@ -34,7 +34,8 @@ class Capture {
         'net.jqwik.engine.JqwikTestEngine' : 'jqwik',
         'com.tngtech.archunit.junit.ArchUnitTestEngine' : 'archunit',
         'co.helmethair.scalatest.ScalatestEngine' : 'scalatest',
-        'io.kotest.runner.junit.platform.KotestJunitPlatformTestEngine' : 'kotest-runner'
+        'io.kotest.runner.junit.platform.KotestJunitPlatformTestEngine' : 'kotest-runner',
+        'io.cucumber.junit.platform.engine.CucumberTestEngine' : 'cucumber-junit-platform'
     ]
     private Logger logger
     private BuildScanExtension buildScanApi
@@ -48,7 +49,7 @@ class Capture {
         if (t.getTestFramework().getClass().getName() == 'org.gradle.api.internal.tasks.testing.junitplatform.JUnitPlatformTestFramework') {
             def engines = testEngines(t)
             buildScanApi.value("${t.identityPath}#engines", "${engines}")
-            if (!engines.isEmpty() && engines.stream().allMatch { e -> supportedEngines.containsKey(e) }) {
+            if (ptsSupported(t, engines)) {
                 buildScanApi.value("${t.identityPath}#pts", 'SUPPORTED')
             } else {
                 buildScanApi.value("${t.identityPath}#pts", 'ENGINES_NOT_ALL_SUPPORTED')
@@ -56,6 +57,19 @@ class Capture {
         } else {
             buildScanApi.value("${t.identityPath}#pts", 'NO_JUNIT_PLATFORM')
         }
+    }
+
+    boolean ptsSupported(Test t, Set<String> engines) {
+        if (!engines.isEmpty() && engines.stream().allMatch { e -> supportedEngines.containsKey(e) }) {
+            // If cucumber is used without companion it's not supported, otherwise it is.
+            return !(cucumberUsed(t, engines) && !t.project.plugins.hasPlugin('com.gradle.cucumber.companion'))
+        } else {
+            return false
+        }
+    }
+
+    boolean cucumberUsed(Test t, Set<String> engines) {
+        return t.classpath.any { f -> f.name.contains('cucumber')} || engines.any { it.contains('cucumber')}
     }
 
     Set<String> testEngines(Test t) {
