--- a/build-data-capturing-gradle-samples/capture-test-pts-support/gradle-test-pts-support.gradle
+++ b/build-data-capturing-gradle-samples/capture-test-pts-support/gradle-test-pts-support.gradle
@@ -60,9 +60,11 @@ class Capture {
     }
 
     boolean ptsSupported(Test t, Set<String> engines) {
-        if (!engines.isEmpty() && engines.stream().allMatch { e -> supportedEngines.containsKey(e) }) {
-            // If cucumber is used without companion it's not supported, otherwise it is.
-            return !(cucumberUsed(t) && !t.project.plugins.hasPlugin('com.gradle.cucumber.companion'))
+        if (cucumberUsed(t) && !t.project.plugins.hasPlugin('com.gradle.cucumber.companion')) {
+            // If cucumber is used without companion it's not supported.
+            return false
+        } else if (!engines.isEmpty() && engines.stream().allMatch { e -> supportedEngines.containsKey(e) }) {
+            return true
         } else {
             return false
         }
