--- a/convention-gradle-enterprise-gradle-plugin/plugins/gradle-2-through-4/build.gradle
+++ b/convention-gradle-enterprise-gradle-plugin/plugins/gradle-2-through-4/build.gradle
@@ -27,10 +27,10 @@ gradlePlugin {
     plugins {
         gradleEnterpriseConventions {
             // CHANGE ME: change for your organization
-            id = 'com.myorg.convention-gradle-enterprise-gradle-2-through-4'
-            displayName = 'Gradle Enterprise Convention Plugin for Gradle 2.0 through Gradle 4.10.3'
+            id = 'com.myorg.convention-develocity-gradle-2-through-4'
+            displayName = 'Develocity Convention Plugin for Gradle 2.0 through Gradle 4.10.3'
             description = 'A Gradle plugin to apply and configure the Build Scan Gradle plugin for com.myorg'
-            implementationClass = 'com.myorg.ConventionGradleEnterpriseGradlePlugin'
+            implementationClass = 'com.myorg.ConventionDevelocityGradlePlugin'
         }
     }
 }
