--- a/convention-gradle-enterprise-gradle-plugin/plugins/gradle-5-or-newer/build.gradle
+++ b/convention-gradle-enterprise-gradle-plugin/plugins/gradle-5-or-newer/build.gradle
@@ -26,10 +26,10 @@ gradlePlugin {
     plugins {
         gradleEnterpriseConventions {
             // CHANGE ME: change for your organization
-            id = 'com.myorg.convention-gradle-enterprise-gradle-5-or-newer'
-            displayName = ' Enterprise Convention Plugin for Gradle 5.0 and higher'
-            description = 'A Gradle plugin to apply and configure the Gradle Enterprise Gradle plugin for com.myorg'
-            implementationClass = 'com.myorg.ConventionGradleEnterpriseGradlePlugin'
+            id = 'com.myorg.convention-develocity-gradle-5-or-newer'
+            displayName = 'Develocity Convention Plugin for Gradle 5.0 and higher'
+            description = 'A Gradle plugin to apply and configure the Develocity Gradle plugin for com.myorg'
+            implementationClass = 'com.myorg.ConventionDevelocityGradlePlugin'
         }
     }
 }
