--- a/common-develocity-gradle-configuration-groovy/settings.gradle
+++ b/common-develocity-gradle-configuration-groovy/settings.gradle
@@ -6,7 +6,7 @@ plugins {
 def isCI = System.getenv('CI') != null // adjust to your CI provider
 
 gradleEnterprise {
-    server = 'https://enterprise-samples.gradle.com' // adjust to your Develocity server
+    server = 'https://develocity-samples.gradle.com' // adjust to your Develocity server
     allowUntrustedServer = false // ensure a trusted certificate is configured
 
     buildScan {
@@ -32,7 +32,7 @@ buildCache {
     // This is available in all Develocity and Develocity Plugin versions.
     /**
     remote(HttpBuildCache) {
-        url = 'https://enterprise-samples.gradle.com/cache/' // adjust to your build cache node, and note the trailing slash
+        url = 'https://develocity-samples.gradle.com/cache/' // adjust to your build cache node, and note the trailing slash
         allowUntrustedServer = false // ensure a trusted certificate is configured
         credentials { creds ->
             creds.username = System.getenv('GRADLE_ENTERPRISE_CACHE_USERNAME')
